Added code to display weather data for each day in three hour blocks

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                 <button id="btn">Search</button>
             </form>
         </aside>
-        <section></section>
+        <section id="weather-info">
+
+        </section>
     </main>
     
     <footer></footer>
